Update application.properties with redis configurations and readme

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+#Configurações para o Spring Data JPA
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
@@ -6,7 +7,19 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/analysis-s3-admission?cur
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Configurações do Pool de conexão
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
 
+# Demais configurações
 spring.profiles.active=dev
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.servlet.context-path=/api
+
+# Configuração do Redis (Cache)
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
